Updated reports for Mongolian

--- a/reports/mono-1.2/HPLT-v1.2-mn.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-mn.yaml
@@ -287,8 +287,7 @@ docs_wds: '[[0.0, 13074], [0.1, 623], [0.2, 497], [0.3, 880], [0.4, 1310], [0.5,
   9974], [8.3, 9740], [8.4, 9464], [8.5, 9595], [8.6, 9951], [8.7, 10049], [8.8, 7952],
   [8.9, 7812], [9.0, 7131], [9.1, 6715], [9.2, 6417], [9.3, 5878], [9.4, 5066], [9.5,
   4288], [9.6, 3496], [9.7, 2301], [9.8, 1227], [9.9, 567], [10.0, 127]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 27038640, "no_urls": 1898577,
-  "no_bad_encoding": 8044}'
+hardrules_tags: '{"not_too_long": 190246, "not_too_short": 27040540, "no_urls": 1899669, "no_bad_encoding": 9101}'
 monocleaner_scores: '[[0.0, 4244261], [0.1, 1831412], [0.2, 4471462], [0.3, 4883031],
   [0.4, 5915045], [0.5, 7241640], [0.6, 9258162], [0.7, 14348477], [0.8, 18101993],
   [0.9, 10152719]]'
