--- a/reports/mono-1.2/HPLT-v1.2-tt.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-tt.yaml
@@ -175,8 +175,7 @@ docs_wds: '[[0.0, 1524], [0.1, 78], [0.2, 111], [0.3, 96], [0.4, 79], [0.5, 55],
   1463], [8.3, 1362], [8.4, 1376], [8.5, 1152], [8.6, 1112], [8.7, 984], [8.8, 857],
   [8.9, 819], [9.0, 722], [9.1, 654], [9.2, 608], [9.3, 551], [9.4, 482], [9.5, 423],
   [9.6, 365], [9.7, 241], [9.8, 129], [9.9, 46], [10.0, 5]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4018367, "no_urls": 125145,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 25621, "not_too_short": 4003138, "no_urls": 124814, "no_bad_encoding": 4}'
 monocleaner_scores: '[[0.0, 921236], [0.1, 203557], [0.2, 361798], [0.3, 687739],
   [0.4, 1259505], [0.5, 1930092], [0.6, 2160289], [0.7, 949955], [0.8, 90076], [0.9,
   7357]]'
