--- a/reports/mono-1.2/HPLT-v1.2-he.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-he.lite.yaml
@@ -3362,3 +3362,4 @@ srclang: he
 timestamp: 1717960418.902662
 unique_sents: 169137393
 warnings: []
+hardrules_tags: '{"not_too_long": 1784239, "not_too_short": 290753800, "no_urls": 9832301, "no_bad_encoding": 5617}'
