--- a/reports/mono-2.0/HPLT-v2-bos_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-bos_Latn.lite.yaml
@@ -381,8 +381,7 @@ docs_wds: '[[5, 289919], [5.1, 291576], [5.2, 292033], [5.3, 292522], [5.4, 3139
   [9.4, 61790], [9.5, 46985], [9.6, 37579], [9.7, 25996], [9.8, 16847], [9.9, 7303],
   [10, 1928]]'
 corpus: HPLT-v2-bos_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 16489647, "no_urls": 4663381,
-  "no_bad_encoding": 10351, "pii": 643464}'
+hardrules_tags: '{"not_too_long": 2902637, "not_too_short": 40435613, "no_urls": 5524181, "no_bad_encoding": 11849 , "pii": 643464}'
 sentence_pairs: 268156601
 src_bytes: 44.01 GB
 src_chars: 45817404394
