--- a/reports/mono-2.0/HPLT-v2-ltz_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ltz_Latn.yaml
@@ -128,8 +128,7 @@ docs_wds: '[[5, 3099], [5.1, 3280], [5.2, 3009], [5.3, 3056], [5.4, 3402], [5.5,
   [8.2, 9685], [8.3, 6658], [8.4, 5675], [8.5, 4473], [8.6, 4234], [8.7, 3981], [8.8,
   4035], [8.9, 3921], [9, 4179], [9.1, 2596], [9.2, 2163], [9.3, 1924], [9.4, 1612],
   [9.5, 1381], [9.6, 1257], [9.7, 854], [9.8, 390], [9.9, 174], [10, 50]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 499641, "no_urls": 81310, "no_bad_encoding":
-  458, "pii": 8854}'
+hardrules_tags: '{"not_too_long": 25985, "not_too_short": 589253, "no_urls": 81351, "no_bad_encoding": 497, "pii": 8854}'
 sentence_pairs: 5058584
 src_bytes: 692.32 MB
 src_chars: 705589105
