Updated reports for Nepali

--- a/reports/mono-1.2/HPLT-v1.2-ne.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ne.yaml
@@ -240,8 +240,7 @@ docs_wds: '[[0.0, 54301], [0.1, 285], [0.2, 402], [0.3, 472], [0.4, 584], [0.5, 
   5603], [8.3, 4610], [8.4, 3739], [8.5, 3135], [8.6, 2688], [8.7, 2685], [8.8, 2341],
   [8.9, 1881], [9.0, 1425], [9.1, 1028], [9.2, 898], [9.3, 780], [9.4, 708], [9.5,
   610], [9.6, 474], [9.7, 297], [9.8, 177], [9.9, 67], [10.0, 21]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 35119804, "no_urls": 1269957,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 137507, "not_too_short": 35117746, "no_urls": 1272557, "no_bad_encoding": 253}'
 monocleaner_scores: '[[0.0, 2868815], [0.1, 723803], [0.2, 1563694], [0.3, 2763699],
   [0.4, 4893272], [0.5, 7911379], [0.6, 12508016], [0.7, 16045536], [0.8, 18793690],
   [0.9, 10320517]]'
