--- a/reports/mono-1.2/HPLT-v1.2-fr.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-fr.lite.yaml
@@ -1327,3 +1327,4 @@ srclang: fr
 timestamp: 1720130619.0207565
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 36936995, "not_too_short": 4898989223, "no_urls": 254588340, "no_bad_encoding": 115359}'
