--- a/reports/mono-2.0/HPLT-v2-fra_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-fra_Latn.lite.yaml
@@ -1263,7 +1263,7 @@ docs_wds: '[[5, 3433563], [5.1, 3507134], [5.2, 3640128], [5.3, 3742505], [5.4, 
   [9.1, 9326328], [9.2, 7800003], [9.3, 6775728], [9.4, 5835848], [9.5, 5077131],
   [9.6, 4513858], [9.7, 3285201], [9.8, 2035955], [9.9, 865356], [10, 250079]]'
 corpus: HPLT-v2-fra_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 621142066, "no_urls": 197008998, "no_bad_encoding": 323744, "pii": 48162843}'
+hardrules_tags: '{"not_too_long": 92230586, "not_too_short": 1513003455, "no_urls": 225896817, "no_bad_encoding": 337359, "pii": 48162843}'
 sentence_pairs: 10557090126
 src_bytes: 1.37 TB
 src_chars: 1447270554770
