Updated reports for Iranian Persian

--- a/reports/mono-1.2/HPLT-v1.2-fa.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-fa.lite.yaml
@@ -1127,3 +1127,4 @@ timestamp: 1719959580.6746752
 unique_sents: 0
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 9276675, "not_too_short": 1619400353, "no_urls": 50168593, "no_bad_encoding": 4263}'
