Updated reports for German

--- a/reports/mono-1.2/HPLT-v1.2-de.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-de.lite.yaml
@@ -1374,3 +1374,4 @@ srclang: de
 timestamp: 1720177390.9648821
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 42544642, "not_too_short": 5478232271, "no_urls": 326651949, "no_bad_encoding": 1122714}'
