--- a/reports/mono-2.0/HPLT-v2-deu_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-deu_Latn.lite.yaml
@@ -1079,8 +1079,7 @@ docs_wds: '[[5, 3973033], [5.1, 4053390], [5.2, 4268174], [5.3, 4402604], [5.4, 
   [9.1, 11191220], [9.2, 8928204], [9.3, 7413124], [9.4, 6177485], [9.5, 5377857],
   [9.6, 4983700], [9.7, 3755468], [9.8, 2636157], [9.9, 1270742], [10, 359063]]'
 corpus: HPLT-v2-deu_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1916323541, "no_urls": 275315779,
-  "no_bad_encoding": 2518409, "pii": 79625847}'
+hardrules_tags: '{"not_too_long": 122654498, "not_too_short": 2075154336, "no_urls": 285151444, "no_bad_encoding": 2518857,  "pii": 79625847}'
 sentence_pairs: 11127739434
 src_bytes: 1.64 TB
 src_chars: 1771482213502
