Updated reports for Korean

--- a/reports/mono-1.2/HPLT-v1.2-ko.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ko.lite.yaml
@@ -1002,3 +1002,4 @@ srclang: ko
 timestamp: 1719495243.1882296
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 1643172, "not_too_short": 641046085, "no_urls": 70617263, "no_bad_encoding": 38307}'
