--- a/reports/mono-1.2/HPLT-v1.2-it.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-it.lite.yaml
@@ -1146,3 +1146,4 @@ srclang: it
 timestamp: 1719954448.57268
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 29190406, "not_too_short": 2823286639, "no_urls": 146643688, "no_bad_encoding": 50399}'
