Updated reports for Japanese

--- a/reports/mono-1.2/HPLT-v1.2-ja.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ja.lite.yaml
@@ -2344,3 +2344,4 @@ srclang: ja
 timestamp: 1720436361.6210876
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 7521318, "not_too_short": 2733538850, "no_urls": 437973496, "no_bad_encoding": 69421}'
