Updated reports for Spanish

--- a/reports/mono-1.2/HPLT-v1.2-es.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-es.lite.yaml
@@ -1401,3 +1401,4 @@ srclang: es
 timestamp: 1721467977.3934119
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 49158112, "not_too_short": 6451234439, "no_urls": 311357209, "no_bad_encoding": 532475}'
