--- a/reports/mono-2.0/HPLT-v2-spa_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-spa_Latn.lite.yaml
@@ -1154,8 +1154,7 @@ docs_wds: '[[5, 4758211], [5.1, 4839408], [5.2, 4971114], [5.3, 5090216], [5.4, 
   5643365], [9.2, 4576785], [9.3, 3885540], [9.4, 3428094], [9.5, 3088819], [9.6,
   2742642], [9.7, 1894874], [9.8, 1175862], [9.9, 449338], [10, 119408]]'
 corpus: HPLT-v2-spa_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 698609136, "no_urls": 173809315,
-  "no_bad_encoding": 10374825, "pii": 66800055}'
+hardrules_tags: '{"not_too_long": 110869329, "not_too_short": 1680279888, "no_urls": 208794985, "no_bad_encoding": 10375204, "pii": 66800055}'
 sentence_pairs: 12121722226
 src_bytes: 1.8 TB
 src_chars: 1942242187122
