--- a/reports/mono-1.2/HPLT-v1.2-sv.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-sv.lite.yaml
@@ -3128,3 +3128,4 @@ srclang: sv
 timestamp: 1718351960.6055517
 unique_sents: 380972579
 warnings: []
+hardrules_tags: '{"not_too_long": 4653126, "not_too_short": 701524934, "no_urls": 40430914, "no_bad_encoding": 17780}'
