--- a/reports/mono-2.0/HPLT-v2-swe_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-swe_Latn.lite.yaml
@@ -589,8 +589,7 @@ docs_wds: '[[5, 631558], [5.1, 632769], [5.2, 663528], [5.3, 672834], [5.4, 7495
   [9.4, 321618], [9.5, 278863], [9.6, 255160], [9.7, 187900], [9.8, 130374], [9.9,
   53758], [10, 20014]]'
 corpus: HPLT-v2-swe_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 123016182, "no_urls": 34113252,
-  "no_bad_encoding": 65925, "pii": 12399213}'
+hardrules_tags: '{"not_too_long": 15716878, "not_too_short": 272802343, "no_urls": 39484672, "no_bad_encoding": 125713,   "pii": 12399213}'
 sentence_pairs: 1754673425
 src_bytes: 242.25 GB
 src_chars: 249421899758
