--- a/reports/mono-1.2/HPLT-v1.2-ar.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ar.lite.yaml
@@ -1177,3 +1177,4 @@ timestamp: 1719557431.717805
 unique_sents: 0
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 8444155, "not_too_short": 1349771205, "no_urls": 41792186, "no_bad_encoding": 54164}'
